<resources>
    <string name="app_name">Recipe App 2</string>
    <string name="display_list_of_receipe">display_list_of_receipe</string>
    <string name="display_myreceipe">display_myreceipe</string>
    <string name="food_photo">food_photo</string>
    <string name="save_the_receipe">save_the_receipe</string>
    <string name="name">Name:</string>
    <string name="ingridients">Ingredients:</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_ingridients">Enter Ingridients</string>
    <string name="steps">Steps:</string>
    <string name="enter_Steps">Enter Steps</string>
    <string name="delete">Delete</string>
    <string name="add_a_food">Add A Food</string>
    <string name="delete_a_Food">Delete A Food</string>
    <string name="username">Username:</string>
    <string name="enter_username">Enter_UserName</string>
    <string name="password">Password:</string>
    <string name="enter_password">Enter_Password</string>
    <string name="login">LogIn</string>
    <string name="if_you_dont_have_an_account">If You Dont have an account :</string>
    <string name="register">Register</string>
    <string name="Name">Name</string>
    <string name="enter_your_name">enter your name</string>
    <string name="family">Family</string>
    <string name="enter_your_familyname">Enter Your Familyname</string>
    <string name="Male">"male "</string>
    <string name="Female">Female</string>
    <string name="cancel">cancel</string>
    <string name="select">Select</string>
    <string name="Gender">Gender:</string>
    <string name="birthday">Birthday:</string>
    <string name="_01_01_1970">01/01/1970</string>
    <string name="change">Change</string>
    <string name="enterusername">enter user name</string>
    <string name="enterpassword">enter password</string>
    <string name="newuser">New user?</string>
    <string name="enterfn">Enter your first name</string>
    <string name="enterln">Enter your last name</string>
    <string name="firstname">First name:</string>
    <string name="lastname">Last name:</string>
    <string name="enterrecipename">Enter recipe name</string>
    <string name="recipename">Recipe name:</string>
    <string name="ingedients">Ingredients:</string>
    <string name="stepstext">Steps:</string>
    <string name="recipe_by">Recipe by:</string>
    <string name="allrecipes">Recipes</string>
    <string name="myrecipes">My Recipes</string>
    <string name="save">Save</string>
    <string name="myaccount">My Account</string>
</resources>