<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include
        android:id="@+id/include3"
        layout="@layout/navbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/navbar_background_color"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ToggleButton
            android:id="@+id/toggleButtonEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="64dp"
            android:layout_weight="1"
            android:drawableStart="@drawable/edit" />

        <ImageButton
            android:id="@+id/imageButtonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:backgroundTint="@color/navbar_background_color"
            android:contentDescription="@string/save_the_receipe"
            app:srcCompat="@drawable/save" />
    </LinearLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/include3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageViewContact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/person"
                android:contentDescription="@string/food_photo"/>

            <TextView
                android:id="@+id/textContact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageViewContact" />

            <EditText
                android:id="@+id/editName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:ems="16"
                android:hint="@string/enter_name"
                android:imeOptions="actionNext"
                android:inputType="textPersonName|textCapWords"
                android:minHeight="48dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textContact">

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/textAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/ingridients"
                app:layout_constraintStart_toStartOf="@+id/editName"
                app:layout_constraintTop_toBottomOf="@id/editName" />

            <EditText
                android:id="@+id/editAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="16"
                android:hint="@string/enter_ingridients"
                android:imeOptions="actionNext"
                android:inputType="text|textPersonName|textCapWords"
                android:minHeight="48dp"
                app:layout_constraintStart_toStartOf="@+id/textAddress"
                app:layout_constraintTop_toBottomOf="@id/textAddress" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="149dp"
                android:layout_height="28dp"
                android:layout_marginTop="16dp"
                android:text="@string/steps"
                app:layout_constraintStart_toStartOf="@+id/editAddress"
                app:layout_constraintTop_toBottomOf="@+id/editAddress" />

            <EditText
                android:id="@+id/Stepsw"
                android:layout_width="408dp"
                android:layout_height="197dp"
                android:ems="16"
                android:hint="@string/enter_Steps"
                android:imeOptions="actionNext"
                android:inputType="text|textPersonName|textCapWords"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />










        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>